I redid everything. All methods dont take a input & output. I improved reusability. Data Structures All In. Gets word count while setting up data structure. Gets position based off of wordCount.